<resources>
    <string name="app_name">Review Dekho</string>
    <string name="app_tagline">Review on the spot!</string>
    <string name="initiative">An Initiative of TechGalvan </string>


    <string name="introslider_button_start">"Let's Get Started"</string>
    <string name="introslider_button_skip">SKIP</string>


    <!-- The Heading Value in intro Slider -->
    <string name="slider_heading_visitor">Visitor </string>
    <string name="slider_heading_user">User</string>
    <string name="slider_heading_reviewer">Reviewer</string>

    <!-- The Detail Description Value in intro Slider -->
    <string name="slider_desc_visitor">Dare to reach out your hand into the darkness, to pull another hand into the light.</string>
    <string name="slider_desc_user">Service to others is the rent you pay for your room here on earth.</string>
    <string name="slider_desc_reviewer">Remember that there is no happiness in having or in getting, but only in giving.</string>

    <!-- Login Signup Dashboard -->

    <string name="loginsignup_dashboard_covid">Covid 19\nMaintain  Social Distance </string>
    <string name="loginsignup_dashboard_food">Food For Everyone</string>

    <string name="loginsignup_button_login">LOGIN</string>
    <string name="loginsignup_button_signup">SIGNUP</string>
    <string name="loginsignup_button_visitor">Continue As Visitor </string>
    <string name="loginsignup_button_work">How we Work ? </string>


    <!-- Login-->
    <string name="login_text_login">LOGIN</string>
    <string name="login_button_Forgot">Forgot Password ?</string>

    <string name="login_button_login">Login</string>
    <string name="login_button_create">Create Account</string>

    <string name="login_edit_username">Email ID</string>
    <string name="login_edit_password">Password</string>
    <!--  Sign Up pages-->
    <string name="signup_title">Create Account</string>
    <string name="signup_fname">First Name</string>

    <string name="signup_lname">Last Name</string>
    <string name="signup_email">Email ID</string>
    <string name="signup_pass">Password</string>
    <string name="signup_username">username</string>

    <string name="signup_register">Register</string>
    <string name="signup_login">Login</string>
    <string name="password_message">Your Password is too short!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_password_error">Kindly Enter Password</string>
    <string name="signup_password_pattern">Password is too weak\n Combination length >7, upper and lower case a number </string>

    <string name="loading_progressbar">Loading...</string>



    <string name="setting_activity_title">Settings</string>
    <string name="setting_activity_tv_title_account">Account</string>
    <string name="setting_activity_tv_title_support">Support</string>
    <string name="setting_activity_tv_title_about">About</string>
    <string name="setting_activity_tv_title_login">Authentication</string>
    <string name="setting_activity_tv_pass">Change Password</string>
    <string name="setting_activity_tv_general_set">General Settings</string>
    <string name="setting_activity_tv_contact">Contact Us</string>
    <string name="setting_activity_tv_about">About Review Dekho</string>
    <string name="setting_activity_tv_logout">Logout</string>



    <string name="setting_popup_window_title">Want to Logout?</string>
    <string name="setting_popup_window_remember_checkbox">Remember Your Credentials</string>
    <string name="setting_popup_window_btn_reject">Cancel</string>
    <string name="setting_popup_window_btn_confirm">Logout</string>




    <!--Profile Fragment -->
    <string name="profile_fragment_title">Sahara</string>
    <string name="profile_fragment_title_donations">Donations</string>
    <string name="profile_fragment_title_needy">Needy</string>
    <string name="profile_fragment_title_donation_accept">Donation Accepted</string>
    <string name="profile_fragment_text_zero">0</string>
    <string name="profile_fragment_title_name">Name</string>
    <string name="profile_fragment_title_email">Email</string>
    <string name="profile_fragment_title_user">User Type</string>
    <string name="profile_fragment_title_dob">Date of Birth</string>
    <string name="profile_fragment_button_edit_profile">Edit Profile</string>

</resources>