<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorPrimary"
    tools:context=".DashboardLogin.DashboardLogin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/loginsignup_dashboard"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:textColor="@color/white"
            android:text="@string/loginsignup_dashboard_covid"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_signup_dashboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:onClick="dashboardSignUp"
                android:background="#FFC107"
                android:text="@string/loginsignup_button_signup" />

            <Button
                android:id="@+id/btn_login_dashboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:onClick="dashboardLogin"
                android:text="@string/loginsignup_button_login"
                android:textStyle="bold"
                android:transitionName="btn_login_transition" />

        </LinearLayout>
        <Button
            android:id="@+id/btn_how_we_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:onClick="dashboardVisitorLogin"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:text="@string/loginsignup_button_visitor" />

        <Button
            android:id="@+id/btn_work_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="17sp"
            android:onClick="dashboardVisitorLogin"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@drawable/button_design_transparent_border"
            android:text="@string/loginsignup_button_work" />






    </LinearLayout>

</ScrollView>