<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    android:transitionName="btn_login_transition"
    tools:context=".Login.Login">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:onClick="loginBack"
                android:src="@drawable/arrow_back"
                tools:targetApi="lollipop"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/login_text_login"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_edit_username"
                    android:textColor="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white"
                    app:hintTextColor="@color/white"
                    app:startIconDrawable="@drawable/username"
                    android:foregroundTint="@color/white"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:fontFamily="@font/muli_black"
                        android:inputType="textEmailAddress" />

                    <!--Always remember to use material design components first add up the dependency and after that go to styles.xml and there change
                    style tag from current to new -> <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge"> otherwise the application will crash-->

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_edit_password"
                    android:textColor="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidthFocused="2dp"
                    android:layout_marginTop="10dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/white"
                    app:hintTextColor="@color/white"
                    android:foregroundTint="@color/white"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_black"
                        android:textColor="@color/white"
                        android:inputType="textPassword" />


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <Button
                android:id="@+id/login_btn_forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:onClick="loginForgotPassword"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="@string/login_button_Forgot"
                android:textAllCaps="true"
                android:textStyle="bold" />


            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:onClick="btnLoginOnClick"
                android:text="@string/login_button_login"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/login_btn_createacc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loginCreateAccount"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:text="@string/login_button_create"
                android:textAllCaps="true"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- TODO-->
        <!-- <RelativeLayout
             android:id="@+id/progress_bar_login_rl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:padding="20dp"
             android:visibility="gone"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/progressbar_back"
             android:elevation="8dp">

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <ProgressBar
                     android:layout_width="30dp"
                     android:layout_height="30dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/loading_progress_bar"
                     android:fontFamily="@font/muli_black"
                     android:layout_marginStart="20dp"
                     android:textSize="16sp"
                     android:layout_gravity="center"/>
             </LinearLayout>
         </RelativeLayout>-->
    </RelativeLayout>


</ScrollView>